[gd_scene load_steps=27 format=3 uid="uid://obqvnkpuuwsr"]

[ext_resource type="Script" uid="uid://phryeo7e3b5g" path="res://skriptit/perhonen_heal.gd" id="1_msgqj"]
[ext_resource type="Texture2D" uid="uid://bshv5yglnr7ru" path="res://grafiikka/Valo128.png" id="2_c16tm"]
[ext_resource type="PackedScene" uid="uid://cuqdj17cc88da" path="res://scenet/timer_heal.tscn" id="2_j3obx"]
[ext_resource type="Texture2D" uid="uid://cx2e2qryxy05i" path="res://grafiikka/PerhonenLento.PNG" id="3_ep2gf"]
[ext_resource type="AudioStream" uid="uid://bcwwxbhw68lwr" path="res://audio/perhonen/perhonen1.mp3" id="4_t4uww"]
[ext_resource type="AudioStream" uid="uid://dimj4ywgd4pec" path="res://audio/perhonen/perhonen2.mp3" id="5_qf72o"]
[ext_resource type="AudioStream" uid="uid://bpp70ea5kn1sb" path="res://audio/perhonen/perhonen3.mp3" id="6_othpa"]
[ext_resource type="AudioStream" uid="uid://dftv68ra3rqyt" path="res://audio/perhonen/perhonen4.mp3" id="7_vfe8a"]
[ext_resource type="Script" uid="uid://nsqycsilv06" path="res://skriptit/line_2d.gd" id="9_mrumj"]
[ext_resource type="Texture2D" uid="uid://d0iom6phxw425" path="res://grafiikka/glowing_circle.png" id="10_tfina"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8nepe"]
atlas = ExtResource("3_ep2gf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg7v4"]
atlas = ExtResource("3_ep2gf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y36mp"]
atlas = ExtResource("3_ep2gf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6athy"]
atlas = ExtResource("3_ep2gf")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppeqm"]
atlas = ExtResource("3_ep2gf")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_21mb1"]
atlas = ExtResource("3_ep2gf")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhk86"]
atlas = ExtResource("3_ep2gf")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_nepos"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nepe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg7v4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y36mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6athy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppeqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21mb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhk86")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_2q18j"]
radius = 64.0312

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7x1qg"]
random_volume_offset_db = 1.0
streams_count = 4
stream_0/stream = ExtResource("4_t4uww")
stream_1/stream = ExtResource("5_qf72o")
stream_2/stream = ExtResource("6_othpa")
stream_3/stream = ExtResource("7_vfe8a")

[sub_resource type="Gradient" id="Gradient_mrumj"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0, 0, 0.412245)
colors = PackedColorArray(0.482353, 0.992157, 0, 0.784314, 0.419608, 0.87451, 0, 0.470588, 0.482353, 0.992157, 0, 0.784314, 0.403922, 0.843137, 0, 0.392157)

[sub_resource type="Gradient" id="Gradient_tfina"]
offsets = PackedFloat32Array(0, 0.463415, 1)
colors = PackedColorArray(1, 1, 1, 0.784314, 1, 1, 1, 0.862745, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pgxin"]
gradient = SubResource("Gradient_tfina")
use_hdr = true

[sub_resource type="Curve" id="Curve_mrumj"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.502164, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_tfina"]
curve = SubResource("Curve_mrumj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mrumj"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(40, 1, 1)
spread = 0.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = -25.0
tangential_accel_max = 25.0
scale_min = 0.2
scale_max = 0.25
scale_curve = SubResource("CurveTexture_tfina")
color_ramp = SubResource("GradientTexture1D_pgxin")

[node name="PerhonenHeal" type="Area2D" groups=["valonlahde"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_msgqj")
timer_heal_node = ExtResource("2_j3obx")
partikkelit_vari = Color(0.293425, 0.586777, 0.311949, 1)
nopeus = 50

[node name="PointLight2D" type="PointLight2D" parent="."]
blend_mode = 2
range_item_cull_mask = 3
shadow_enabled = true
texture = ExtResource("2_c16tm")
texture_scale = 1.4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.435501, 0.686193, 0, 1)
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_nepos")
frame_progress = 0.900234

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2q18j")

[node name="AudioPerhonen" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_7x1qg")
volume_db = -2.0
max_distance = 500.0
bus = &"Kaiku"

[node name="Line2D" type="Line2D" parent="."]
modulate = Color(1, 1, 1, 0.470588)
points = PackedVector2Array(71, -25, 81, -27, 91, -26, 103, -23, 112, -27, 120, -25, 127, -28)
gradient = SubResource("Gradient_mrumj")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
round_precision = 32
antialiased = true
script = ExtResource("9_mrumj")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0.293425, 0.586777, 0.311949, 1)
position = Vector2(109, 1)
amount = 30
texture = ExtResource("10_tfina")
lifetime = 1.2
preprocess = 0.25
explosiveness = 0.5
randomness = 1.0
visibility_rect = Rect2(-40, -12.5, 80, 25)
process_material = SubResource("ParticleProcessMaterial_mrumj")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
